--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ picture: assets/images/profile.jpg
 resume: true
 resume-external: true
 resume-url: ''
-url: 'https://koppl.in/indigo'
+url: 'https://robinhirt.com'
 permalink: '/:title/'
 disqus:
   shortname:
