--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,15 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
+- ptitle: Half-empty or half-full? A Hybrid Approach to Predict Recycling Behavior of Consumers to Increase Reverse Vending Machine Uptime
+  info: Lecture Notes in Business Information Processing
+  date: 2020
+  authors: Walk, J.; Hirt, R.; Kühl, N.; Hersløv, E. R.
+
+- ptitle: Supervised machine learning in service systems - deriving insights from distributed data
+  info: Dissertation
+  date: 2019
+  authors: Hirt, R.
+
 - ptitle: Cognitive computing for customer profiling - meta classification for gender prediction; 2019. Electronic markets.
   info: Electronic markets.
   date: 2019
