--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -23,7 +23,7 @@
 
 - name: SAP AG
   link: http://www.sap.de/
-  job: Working Student; Consulting
+  job: Consulting
   date: Feb 2016 - Jul 2016
   description: "Consulting in Data Management Platform, e.g. Stream analyses in the area of Complex Event Processing (CEP) for network data monitoring, Analyses of applications for neuromorphic computing"
 
