added talks and publications

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Robin Hirt
-bio: 'AI Enthusiast, Co-CEO & Co-Founder of prenode'
+bio: 'Secure AI Enthusiast, Co-CEO & Co-Founder of prenode'
 description: >-
   Co-founder of prenode, a company enabling cross-organizational machine
   learning that keeps data private. I hold a PhD from KIT in applied AI,
