--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,9 +1,20 @@
-# careers section data
-# if you don't have language feature(language.yml is empty), ignore "i18n" items
-- ptitle: How to Learn from Others - Transfer Machine Learning with Additive Regression Models to Improve Sales Forecasting
-  info: IEEE International Conference on Business Informatics (CBI), IEEE
+
+
+- ptitle: Sequential Transfer Machine Learning in Networks - Measuring the Impact of Data and Neural Net Similarity on Transferability.
+  info: Hawaii International Conference on Systems Sciences (HICSS-54), January 5-8
+  date: 2021
+  authors: Hirt, R.; Srivastava, Akash; Berg, C.; Kühl, N.
+
+- ptitle: How to Conduct Rigorous Supervised Machine Learning in Information Systems Research - The Supervised Machine Learning Reportcard.
+  info: Communications of the Association for Information Systems 
   date: 2020
-  authors: Hirt, R.; Kühl, N.; Peker, Y.; Satzger, G.
+  authors: Kühl, N.; Hirt, R.; Baier, L.; Schmitz, B.; Satzger, G.
+
+- ptitle: A Transfer Machine Learning Matching Algorithm for Source and Target (TL-MAST)
+  info: Lecture Notes in Computer Science (LNCS).
+  date: 2020
+  authors: Peters, F.; Hirt, R.
+
 
 - ptitle: A network-based transfer learning approach to improve sales forecasting of new products
   info: 2020. European Conference on Information Systems (ECIS) - Marrakech, Marocco, June 15 - 17
